--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "googleapis": "^165.0.0",
+    "multer": "^2.0.2",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
