--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-analytics/data": "^5.2.1",
+    "@supabase/supabase-js": "^2.91.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
