--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "dependencies": {
     "@google-analytics/data": "^5.2.1",
     "@supabase/supabase-js": "^2.91.1",
+    "compression": "^1.8.1",
     "csv-parser": "^3.0.0",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
+    "express-status-monitor": "^1.3.4",
     "googleapis": "^165.0.0",
     "multer": "^2.0.2",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "systeminformation": "^5.30.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
